--- a/restaurant-org/tsconfig.base.json
+++ b/restaurant-org/tsconfig.base.json
@@ -18,6 +18,9 @@
       "@restaurant-org/customer-data-access": [
         "libs/customer/data-access/src/index.ts"
       ],
+      "@restaurant-org/customer-feature-details": [
+        "libs/customer/feature-details/src/index.ts"
+      ],
       "@restaurant-org/customer-feature-list": [
         "libs/customer/feature-list/src/index.ts"
       ],
